[gd_scene load_steps=3 format=3 uid="uid://ibcjinjlhhi"]

[ext_resource type="Script" path="res://scenes/day_03/_shared/game/day_03_game.gd" id="1_fcdcw"]
[ext_resource type="PackedScene" uid="uid://xl5bc10rc15p" path="res://scenes/_shared/ui/results_screen.tscn" id="2_5qwej"]

[node name="Day03Game" type="Node"]
script = ExtResource("1_fcdcw")

[node name="ResultsScreenBuffet" parent="." instance=ExtResource("2_5qwej")]

[node name="Level" type="Node" parent="."]

[node name="Placeholder" type="Node" parent="Level"]

[connection signal="results_presented" from="ResultsScreenBuffet" to="." method="_on_results_screen_results_presented"]
